--- a/prideflags.html
+++ b/prideflags.html
@@ -40,8 +40,9 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Gay_flag_7.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1899328881/lgbtq-pride-earrings-rainbow-lesbian-gay" target="_blank"
-                            rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
+                        Jewelry: <a
+                            href="https://pyrrhicsilvacrafts.etsy.com/listing/1899328881/lgbtq-pride-earrings-rainbow-lesbian-gay"
+                            target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                     </td>
                 </tr>
@@ -91,8 +92,9 @@
                     <td>Flag: <a href="https://commons.wikimedia.org/wiki/File:Transgender_Pride_flag.svg"
                             target="_blank" rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885155086/lgbtq-pride-earrings-transgender" target="_blank"
-                            rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
+                        Jewelry: <a
+                            href="https://pyrrhicsilvacrafts.etsy.com/listing/1885155086/lgbtq-pride-earrings-transgender"
+                            target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                 </tr>
                 <tr>
@@ -106,8 +108,11 @@
                         yellow, purple, yellow</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Intersex_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
-                        Jewelry: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885155086/lgbtq-pride-earrings-transgender/" target="_blank"
-                            rel="noopener noreferrer">Pyrrhic Silva Crafts</a></td>
+                        <br />
+                        Jewelry: <a
+                            href="https://pyrrhicsilvacrafts.etsy.com/listing/1885155086/lgbtq-pride-earrings-transgender/"
+                            target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
+                    </td>
                 </tr>
                 <tr>
                     <td>
@@ -121,8 +126,9 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Nonbinary_flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885155086/lgbtq-pride-earrings-transgender" target="_blank"
-                            rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
+                        Jewelry: <a
+                            href="https://pyrrhicsilvacrafts.etsy.com/listing/1885155086/lgbtq-pride-earrings-transgender"
+                            target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                 </tr>
                 <tr>
@@ -137,8 +143,9 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Genderqueer_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885155086/lgbtq-pride-earrings-transgender" target="_blank"
-                            rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
+                        Jewelry: <a
+                            href="https://pyrrhicsilvacrafts.etsy.com/listing/1885155086/lgbtq-pride-earrings-transgender"
+                            target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                 </tr>
                 <tr>
@@ -153,8 +160,9 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Genderfluidity_Pride-Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a></td>
                     <br />
-                    Jewlery: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885155086/lgbtq-pride-earrings-transgender" target="_blank"
-                        rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
+                    Jewlery: <a
+                        href="https://pyrrhicsilvacrafts.etsy.com/listing/1885155086/lgbtq-pride-earrings-transgender"
+                        target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                 </tr>
                 <tr>
                     <td>
@@ -196,8 +204,9 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:5-striped_New_Gay_Male_Pride_Flag.svg"
                             target="_blank" rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1899328881/lgbtq-pride-earrings-rainbow-lesbian-gay" target="_blank"
-                            rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
+                        Jewelry: <a
+                            href="https://pyrrhicsilvacrafts.etsy.com/listing/1899328881/lgbtq-pride-earrings-rainbow-lesbian-gay"
+                            target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                     </td>
                 </tr>
@@ -213,8 +222,9 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Lesbian_Pride_Flag_2019.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1899328881/lgbtq-pride-earrings-rainbow-lesbian-gay" target="_blank"
-                            rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
+                        Jewelry: <a
+                            href="https://pyrrhicsilvacrafts.etsy.com/listing/1899328881/lgbtq-pride-earrings-rainbow-lesbian-gay"
+                            target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                     </td>
                 </tr>
@@ -230,8 +240,9 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Bisexual_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewlery: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1899328881/lgbtq-pride-earrings-rainbow-lesbian-gay" target="_blank"
-                            rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
+                        Jewlery: <a
+                            href="https://pyrrhicsilvacrafts.etsy.com/listing/1899328881/lgbtq-pride-earrings-rainbow-lesbian-gay"
+                            target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                     </td>
                 </tr>
@@ -247,8 +258,9 @@
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Pansexuality_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
-                        Jewelry: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1899328881/lgbtq-pride-earrings-rainbow-lesbian-gay" target="_blank"
-                            rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
+                        Jewelry: <a
+                            href="https://pyrrhicsilvacrafts.etsy.com/listing/1899328881/lgbtq-pride-earrings-rainbow-lesbian-gay"
+                            target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                     </td>
                 </tr>
@@ -263,7 +275,9 @@
                         yellow, green, white, black</td>
                     <td>Flag: <a href="https://lgbtqia.fandom.com/wiki/File:Ceterosexual2.png" target="_blank"
                             rel="noopener noreferrer">LGBTQIA+ Wiki</a>
-                        Jewelry: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885156512/lgbtq-pride-earrings-aroace-asexual"
+                        <br />
+                        Jewelry: <a
+                            href="https://pyrrhicsilvacrafts.etsy.com/listing/1885156512/lgbtq-pride-earrings-aroace-asexual"
                             target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                 </tr>
@@ -277,7 +291,9 @@
                             alt="4mm bicone earrings of the asexual pride flag." />black, gray, white, purple</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Asexual_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
-                        Jewelry: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885156512/lgbtq-pride-earrings-aroace-asexual"
+                        <br />
+                        Jewelry: <a
+                            href="https://pyrrhicsilvacrafts.etsy.com/listing/1885156512/lgbtq-pride-earrings-aroace-asexual"
                             target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                 </tr>
@@ -292,8 +308,11 @@
                         green, light green, white, gray, black</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Aromantic_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
-                        Jewlery: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885156512/lgbtq-pride-earrings-aroace-asexual"
-                            target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a></td>
+                        <br />
+                        Jewlery: <a
+                            href="https://pyrrhicsilvacrafts.etsy.com/listing/1885156512/lgbtq-pride-earrings-aroace-asexual"
+                            target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
+                    </td>
                 </tr>
                 <tr>
                     <td>
@@ -306,7 +325,9 @@
                         orange, yellow, white, light blue, blue</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Aroace_flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
-                        Jewlery: <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885156512/lgbtq-pride-earrings-aroace-asexual"
+                        <br />
+                        Jewlery: <a
+                            href="https://pyrrhicsilvacrafts.etsy.com/listing/1885156512/lgbtq-pride-earrings-aroace-asexual"
                             target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                 </tr>
@@ -317,7 +338,7 @@
         <nav>
             <ul>
                 <li>&nbsp;</li>
-                <li>Last updated 23 April 2025.</li>
+                <li>Last updated 01 May 2025.</li>
             </ul>
         </nav>
     </footer>
