Added an About Me page

--- a/seasons.html
+++ b/seasons.html
@@ -15,6 +15,8 @@
             <ul>
                 <li>&nbsp;</li>
                 <li><a href="index.html">Home</a></li>
+                <li>|</li>
+                <li><a href="aboutme.html">About Me</a></li>
             </ul>
         </nav>
     </header>
@@ -32,32 +34,28 @@
                 </tr>
                 <tr>
                     <th scope="row">Winter</th>
-                    <td><img src="" 
-                        alt="A winter-themed color pallet; white, blue, light blue." />
+                    <td><img src="" alt="A winter-themed color pallet; white, blue, light blue." />
                     </td>
                     <td>white | blue | light blue</td>
                     <td>TBA</td>
                 </tr>
                 <tr>
                     <th scope="row">"Spring</th>
-                    <td><img src="" 
-                        alt="A spring-themed color pallet; light purple, light green, pink." />
+                    <td><img src="" alt="A spring-themed color pallet; light purple, light green, pink." />
                     </td>
                     <td>light purple | light green | pink</td>
                     <td>TBA</td>
                 </tr>
                 <tr>
                     <th scope="row">Summer</th>
-                    <td><img src="" 
-                        alt="A summer-themed color pallet; yellow, green, light blue." />
+                    <td><img src="" alt="A summer-themed color pallet; yellow, green, light blue." />
                     </td>
                     <td>yellow | green | light blue</td>
                     <td>TBA</td>
                 </tr>
                 <tr>
                     <th scope="row">Fall</th>
-                    <td><img src="" 
-                        alt="A fall-themed color pallet; light green, yellow, orange." />
+                    <td><img src="" alt="A fall-themed color pallet; light green, yellow, orange." />
                     </td>
                     <td>light green | yellow | orange</td>
                     <td>TBA</td>
