--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <h1>Pyrrhic's Color Swatches</h1>
         <nav>
             <ul>
+                <li>&nbsp;</li>
                 <li><a href="index.html">Home</a></li>
+                <li>|</li>
+                <li><a href="aboutme.html">About Me</a></li>
             </ul>
         </nav>
     </header>
@@ -21,9 +24,6 @@
         <div class="project">
             <p>Pyrrhic's Color Swatches is a visual design resource for personal use.</p>
             <p>The information and images on this website are provided as-is and may contain errors.</p>
-            <p>I am the owner of <a href="https://pyrrhicsilvacrafts.etsy.com" target="_blank"
-                    rel="noopener noreferrer">Silva Crafts on Etsy</a>. Any purchases you make directly support me and
-                my creative endevors.</p>
         </div>
         <div class="project">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Gay_flag_7.svg/320px-Gay_flag_7.svg.png"
@@ -47,7 +47,7 @@
         <nav>
             <ul>
                 <li>&nbsp;</li>
-                <li>Last updated 23 April 2025.</li>
+                <li>Last updated 01 May 2025.</li>
             </ul>
         </nav>
     </footer>
