--- a/prideflags.html
+++ b/prideflags.html
@@ -15,6 +15,8 @@
             <ul>
                 <li>&nbsp;</li>
                 <li><a href="index.html">Home</a></li>
+                <li>|</li>
+                <li><a href="aboutme.html">About Me</a></li>
             </ul>
         </nav>
     </header>
