Fixed table formatting error

--- a/prideflags.html
+++ b/prideflags.html
@@ -160,11 +160,12 @@
                             alt="4mm bicone earrings of the genderfluid pride flag." />pink, white, purple, black, blue
                     </td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Genderfluidity_Pride-Flag.svg" target="_blank"
-                            rel="noopener noreferrer">Wikipedia</a></td>
-                    <br />
-                    Jewlery: <a
-                        href="https://pyrrhicsilvacrafts.etsy.com/listing/1885155086/lgbtq-pride-earrings-transgender"
-                        target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
+                            rel="noopener noreferrer">Wikipedia</a>
+                        <br />
+                        Jewlery: <a
+                            href="https://pyrrhicsilvacrafts.etsy.com/listing/1885155086/lgbtq-pride-earrings-transgender"
+                            target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
+                    </td>
                 </tr>
                 <tr>
                     <td>
