Switched out wikipedia photo for one from my shop

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <p>The information and images on this website are provided as-is and may contain errors.</p>
         </div>
         <div class="project">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Gay_flag_7.svg/320px-Gay_flag_7.svg.png"
-                alt="The 7-stripe rainbow LGBTQ pride flag." />
+            <img src="img/Gay_4mm_bicone_earrings1.JPEG"
+                alt="LGBTQ+ Pride earrings." />
             <h2>Pride Flags</h2>
             <p>The inclusion or omission of any flag or flag variant does not imply identification with any community or
                 sub-community.</p>
