Fixed formatting for seasons, added product image for 6-rainbow

--- a/prideflags.html
+++ b/prideflags.html
@@ -54,9 +54,15 @@
                             alt="The standard rainbow-striped flag; from top to bottom: red, orange, yellow, green, blue, purple." />
                         "Standard" 6-stripe Rainbow
                     </td>
-                    <td>red, orange, yellow, green, blue, purple</td>
+                    <td><img src="img/Rainbow6_4mm_bicone_earrnigs.jepg"
+                            alt="4mm bicone bead earrings of the six-striped rainbow flag." />
+                        red, orange, yellow, green, blue, purple</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Gay_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a></td>
+                    <br />
+                    Jewelry: <a
+                        href="https://pyrrhicsilvacrafts.etsy.com/listing/1899328881/lgbtq-pride-earrings-rainbow-lesbian-gay"
+                        target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                 </tr>
                 <tr>
                     <td>
@@ -68,6 +74,18 @@
                     <td>Flag: <a
                             href="https://en.wikipedia.org/wiki/File:LGBTQ%2B_rainbow_flag_Quasar_%22Progress%22_variant.svg"
                             target="_blank" rel="noopener noreferrer">Wikipedia</a></td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Gay_flag_8.svg/330px-Gay_flag_8.svg.png"
+                            alt="Original eight-striped rainbow flag; from top to bottom: pink, red, orange, yellow, green, light blue, blue, purple." />
+                        Original 8-stripe Rainbow
+                    </td>
+                    <td>pink, red, orange, yellow, green, light blue, blue, purple</td>
+                    <td>Flag: <a href="https://commons.wikimedia.org/wiki/File:Gay_flag_8.svg" target="_blank"
+                            rel="noopener noreferrer">Wikipedia</a>
+                    </td>
+                    </td>
                 </tr>
             </table>
         </div>
@@ -341,7 +359,7 @@
         <nav>
             <ul>
                 <li>&nbsp;</li>
-                <li>Last updated 01 May 2025.</li>
+                <li>Last updated 05 May 2025.</li>
             </ul>
         </nav>
     </footer>
