Fixed rainbow 6 image

--- a/prideflags.html
+++ b/prideflags.html
@@ -54,7 +54,7 @@
                             alt="The standard rainbow-striped flag; from top to bottom: red, orange, yellow, green, blue, purple." />
                         "Standard" 6-stripe Rainbow
                     </td>
-                    <td><img src="img/Rainbow6_4mm_bicone_earrnigs.jepg"
+                    <td><img src="img/Rainbow6_4mm_bicone_earrings.JPEG"
                             alt="4mm bicone bead earrings of the six-striped rainbow flag." />
                         red, orange, yellow, green, blue, purple</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Gay_Pride_Flag.svg" target="_blank"
