--- a/prideflags.html
+++ b/prideflags.html
@@ -58,11 +58,12 @@
                             alt="4mm bicone bead earrings of the six-striped rainbow flag." />
                         red, orange, yellow, green, blue, purple</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Gay_Pride_Flag.svg" target="_blank"
-                            rel="noopener noreferrer">Wikipedia</a></td>
-                    <br />
-                    Jewelry: <a
-                        href="https://pyrrhicsilvacrafts.etsy.com/listing/1899328881/lgbtq-pride-earrings-rainbow-lesbian-gay"
-                        target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
+                            rel="noopener noreferrer">Wikipedia</a>
+                        <br />
+                        Jewelry: <a
+                            href="https://pyrrhicsilvacrafts.etsy.com/listing/1899328881/lgbtq-pride-earrings-rainbow-lesbian-gay"
+                            target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
+                    </td>
                 </tr>
                 <tr>
                     <td>
