Added a lot of new flags

--- a/prideflags.html
+++ b/prideflags.html
@@ -86,7 +86,6 @@
                     <td>Flag: <a href="https://commons.wikimedia.org/wiki/File:Gay_flag_8.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                     </td>
-                    </td>
                 </tr>
             </table>
         </div>
@@ -203,6 +202,72 @@
                             target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/f/f0/Androgyne.svg/revision/latest/scale-to-width-down/320?cb=20250310071438"
+                            alt="The androgyne pride flag; from left to right: dark pink, purple, light blue." />
+                        Androgyne (gender identity)
+                    </td>
+                    <td>dark pink, purple, light blue</td>
+                    <td>Flag: <a href="https://lgbtqia.fandom.com/wiki/File:Androgyne.svg" target="_blank"
+                            rel="noopener noreferrer">LGBTQIA+ Wiki</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/0/04/Agender_Flag.svg/revision/latest/scale-to-width-down/320?cb=20250310071358"
+                            alt="The agender pride flag; from top to bottom: black, gray, white, light green, white, gray, black." />
+                        Agender
+                    </td>
+                    <td>black, gray, white, light green, white, gray, black</td>
+                    <td>Flag: <a href="https://lgbtqia.fandom.com/wiki/File:Agender_Flag.svg" target="_blank"
+                            rel="noopener noreferrer">LGBTQIA+ Wiki</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/0/0c/Gender_Neutral_Flag.svg/revision/latest/scale-to-width-down/320?cb=20250310073218"
+                            alt="Gender neutral pride flag; from top to bottom: yellow, white, light green, green." />
+                        Gender neutral
+                    </td>
+                    <td>yellow, white, light green, green</td>
+                    <td>Flag: <a href="https://lgbtqia.fandom.com/wiki/File:Gender_Neutral_Flag.svg" target="_blank"
+                            rel="noopener noreferrer">LGBTQIA+ Wiki</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/5/5a/Neutrois_Flag.png/revision/latest/scale-to-width-down/320?cb=20220607173644"
+                            alt="Neutrois pride flag; from top to bottom: white, green, black." />
+                        Neutrois (null gender)
+                    </td>
+                    <td>white, green, black</td>
+                    <td>Flag: <a href="https://lgbtqia.fandom.com/wiki/File:Neutrois_Flag.png" target="_blank"
+                            rel="noopener noreferrer">LGBTQIA+ Wiki</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/d/da/Multigender_Flag.svg/revision/latest/scale-to-width-down/320?cb=20250310075140"
+                            alt="Multigender pride flag; from top to bottom: blue, light blue, orange, light blue, blue." />
+                        Multigender (more than one gender identity)
+                    </td>
+                    <td>blue, light blue, orange, light blue, blue</td>
+                    <td>Flag: <a href="https://lgbtqia.fandom.com/wiki/File:Multigender_Flag.svg" target="_blank"
+                            rel="noopener noreferrer">LGBTQIA+ Wiki</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/f/f9/Polygender.webp/revision/latest?cb=20220304025336&format=original"
+                            alt="Polygender pride flag; from top to bottom: black, gray, pink, yellow, light blue." />
+                        Polygender (more than three gender identities)
+                    </td>
+                    <td>black, gray, pink, yellow, light blue</td>
+                    <td>Flag: <a href="https://lgbtqia.fandom.com/wiki/File:Polygender.webp" target="_blank"
+                            rel="noopener noreferrer">LGBTQIA+ Wiki</a>
+                    </td>
+                </tr>
             </table>
         </div>
         <div class="project">
@@ -271,12 +336,12 @@
                 <tr>
                     <td>
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Pansexuality_Pride_Flag.svg/320px-Pansexuality_Pride_Flag.svg.png"
-                            alt="The pansexual pride flag; from top to bottom: pink, yellow, blue." />
+                            alt="The pansexual pride flag; from top to bottom: dark pink, yellow, blue." />
                         Pansexual
                     </td>
                     <td><img src="img/Pansexual_4mm_bicone_earrings.jpg"
                             alt="4mm bicone earrings of the pansexual pride flag." />
-                        pink, yellow, blue</td>
+                        dark pink, yellow, blue</td>
                     <td>Flag: <a href="https://en.wikipedia.org/wiki/File:Pansexuality_Pride_Flag.svg" target="_blank"
                             rel="noopener noreferrer">Wikipedia</a>
                         <br />
@@ -351,6 +416,39 @@
                         Jewlery: <a
                             href="https://pyrrhicsilvacrafts.etsy.com/listing/1885156512/lgbtq-pride-earrings-aroace-asexual"
                             target="_blank" rel="noopener noreferrer">Pyrrhic Silva Crafts</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/a/a0/Omnisexual_Flag.svg/revision/latest/scale-to-width-down/320?cb=20250310081708"
+                            alt="The omnisexual pride flag; from top to bottom: pink, dark pink, almost-black dark pink, blue, light blue." />
+                        Omnisexual (attraction to all sexes/genders)
+                    </td>
+                    <td>pink, dark pink, almost-black dark pink, blue, light blue</td>
+                    <td>Flag: <a href="https://lgbtqia.fandom.com/wiki/File:Omnisexual_Flag.svg" target="_blank"
+                            rel="noopener noreferrer">LGBTQIA+ Wiki</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/4/49/Polysexual_Flag.svg/revision/latest/scale-to-width-down/320?cb=20220123030926"
+                            alt="The polysexual pride flag; from top to bottom: magenta, green, blue." />
+                        Polysexual (attraction to greater than two sexes/genders)
+                    </td>
+                    <td>magenta, green, blue</td>
+                    <td>Flag: <a href="https://lgbtqia.fandom.com/wiki/File:Polysexual_Flag.svg" target="_blank"
+                            rel="noopener noreferrer">LGBTQIA+ Wiki</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/a/af/Multisexual_Flag.png/revision/latest?cb=20220522002239&format=original"
+                            alt="The multisexual pride flag; from top to bottom: purple, white, blue, dark pink." />
+                        Multisexual (umbrella term for attraction to greater than one sex/gender)
+                    </td>
+                    <td>purple, white, blue, dark pink</td>
+                    <td>Flag: <a href="https://lgbtqia.fandom.com/wiki/File:Multisexual_Flag.png" target="_blank"
+                            rel="noopener noreferrer">LGBTQIA+ Wiki</a>
                     </td>
                 </tr>
             </table>
