Fixed images that didn't load

--- a/prideflags.html
+++ b/prideflags.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Pride Flags | Pyrrhic's Color Swatches</h1>
+        <h1>Pride Flags | Pyrrhic Silva Crafts</h1>
         <nav>
             <ul>
                 <li>&nbsp;</li>
@@ -204,7 +204,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/f/f0/Androgyne.svg/revision/latest/scale-to-width-down/320?cb=20250310071438"
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/f/f0/Androgyne.svg"
                             alt="The androgyne pride flag; from left to right: dark pink, purple, light blue." />
                         Androgyne (gender identity)
                     </td>
@@ -215,7 +215,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/0/04/Agender_Flag.svg/revision/latest/scale-to-width-down/320?cb=20250310071358"
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/0/04/Agender_Flag.svg"
                             alt="The agender pride flag; from top to bottom: black, gray, white, light green, white, gray, black." />
                         Agender
                     </td>
@@ -226,7 +226,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/0/0c/Gender_Neutral_Flag.svg/revision/latest/scale-to-width-down/320?cb=20250310073218"
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/0/0c/Gender_Neutral_Flag.svg"
                             alt="Gender neutral pride flag; from top to bottom: yellow, white, light green, green." />
                         Gender neutral
                     </td>
@@ -237,7 +237,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/5/5a/Neutrois_Flag.png/revision/latest/scale-to-width-down/320?cb=20220607173644"
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/5/5a/Neutrois_Flag.png"
                             alt="Neutrois pride flag; from top to bottom: white, green, black." />
                         Neutrois (null gender)
                     </td>
@@ -248,7 +248,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/d/da/Multigender_Flag.svg/revision/latest/scale-to-width-down/320?cb=20250310075140"
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/d/da/Multigender_Flag.svg"
                             alt="Multigender pride flag; from top to bottom: blue, light blue, orange, light blue, blue." />
                         Multigender (more than one gender identity)
                     </td>
@@ -259,7 +259,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/f/f9/Polygender.webp/revision/latest?cb=20220304025336&format=original"
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/f/f9/Polygender.webp"
                             alt="Polygender pride flag; from top to bottom: black, gray, pink, yellow, light blue." />
                         Polygender (more than three gender identities)
                     </td>
@@ -420,7 +420,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/a/a0/Omnisexual_Flag.svg/revision/latest/scale-to-width-down/320?cb=20250310081708"
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/a/a0/Omnisexual_Flag.svg"
                             alt="The omnisexual pride flag; from top to bottom: pink, dark pink, almost-black dark pink, blue, light blue." />
                         Omnisexual (attraction to all sexes/genders)
                     </td>
@@ -431,7 +431,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/4/49/Polysexual_Flag.svg/revision/latest/scale-to-width-down/320?cb=20220123030926"
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/4/49/Polysexual_Flag.svg"
                             alt="The polysexual pride flag; from top to bottom: magenta, green, blue." />
                         Polysexual (attraction to greater than two sexes/genders)
                     </td>
@@ -442,7 +442,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/a/af/Multisexual_Flag.png/revision/latest?cb=20220522002239&format=original"
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/a/af/Multisexual_Flag.png"
                             alt="The multisexual pride flag; from top to bottom: purple, white, blue, dark pink." />
                         Multisexual (umbrella term for attraction to greater than one sex/gender)
                     </td>
@@ -458,7 +458,7 @@
         <nav>
             <ul>
                 <li>&nbsp;</li>
-                <li>Last updated 05 May 2025.</li>
+                <li>Last updated 25 May 2025.</li>
             </ul>
         </nav>
     </footer>
