--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Pyrrhic's Color Swatches</h1>
+        <h1>Pyrrhic Silva Crafts</h1>
         <nav>
             <ul>
                 <li>&nbsp;</li>
@@ -22,7 +22,7 @@
     </header>
     <div id="projects">
         <div class="project">
-            <p>Pyrrhic's Color Swatches is a visual design resource for personal use.</p>
+            <p>Pyrrhic Silva Shop is a visual design resource for personal use.</p>
             <p>The information and images on this website are provided as-is and may contain errors.</p>
         </div>
         <div class="project">
@@ -47,7 +47,7 @@
         <nav>
             <ul>
                 <li>&nbsp;</li>
-                <li>Last updated 01 May 2025.</li>
+                <li>Last updated 25 May 2025.</li>
             </ul>
         </nav>
     </footer>
