--- a/seasons.html
+++ b/seasons.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Four Seasons | Pyrrhic's Color Swatches</title>
+    <title>Four Seasons</title>
     <link rel="stylesheet" href="reset.css" type="text/css">
     <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 
 <body>
     <header>
-        <h1>Four Seasons</h1>
+        <h1>Four Seasons | Pyrrhic Silva Crafts</h1>
         <nav>
             <ul>
                 <li>&nbsp;</li>
@@ -66,7 +66,7 @@
         <nav>
             <ul>
                 <li>&nbsp;</li>
-                <li>Last updated 05 May 2025.</li>
+                <li>Last updated 25 May 2025.</li>
             </ul>
         </nav>
     </footer>
