--- a/prideflags.html
+++ b/prideflags.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Pride Flags</title>
+    <title>Pride Flags | Pyrrhic Silva Crafts</title>
     <link rel="stylesheet" href="reset.css" type="text/css">
     <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 
 <body>
     <header>
-        <h1>Pride Flags | Pyrrhic Silva Crafts</h1>
+        <h1>Pride Flags</h1>
         <nav>
             <ul>
                 <li>&nbsp;</li>
