--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 <li><a href="index.html">Home</a></li>
                 <li>|</li>
                 <li><a href="aboutme.html">About Me</a></li>
+                <li>|</li>
+                <li><a href="https://pyrrhicsilvacrafts.etsy.com" target="_blank" rel="noopener noreferrer">My Etsy
+                        Shop</a></li>
             </ul>
         </nav>
     </header>
