Added two new flags, moved listings

--- a/prideflags.html
+++ b/prideflags.html
@@ -154,6 +154,34 @@
                     <td><a href="https://pyrrhicsilvacrafts.etsy.com/listing/1899328881/lgbtq-pride-earrings-rainbow-lesbian-gay"
                             target="_blank" rel="noopener noreferrer">4mm bicone bead star earrings</a>
                     </td>
+                <tr>
+                    <td>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Philadelphia_Pride_Flag.svg/330px-Philadelphia_Pride_Flag.svg.png"
+                            alt="Philadelphia eight-striped rainbow flag variant; from top to bottom: black, brown, red, orange, yellow, green, blue, purple." />
+                        Philadelphia 8-stripe Rainbow
+                        <br />
+                        (Flag from <a href="https://commons.wikimedia.org/wiki/File:Philadelphia_Pride_Flag.svg"
+                            target="_blank" rel="noopener noreferrer">Wikipedia</a>)
+                    </td>
+                    <td>
+                        8 stripes
+                        <ul>
+                            <li>black</li>
+                            <li>brown</li>
+                            <li>red</li>
+                            <li>orange</li>
+                            <li>yellow</li>
+                            <li>green</li>
+                            <li>blue</li>
+                            <li>purple</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <br />
+                    </td>
+                    <td><a href="https://pyrrhicsilvacrafts.etsy.com/listing/1899328881/lgbtq-pride-earrings-rainbow-lesbian-gay"
+                            target="_blank" rel="noopener noreferrer">4mm bicone bead star earrings</a>
+                    </td>
                 </tr>
             </table>
         </div>
@@ -396,7 +424,7 @@
                     </td>
                     <td><a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885155086/lgbtq-pride-earrings-transgender"
                             target="_blank" rel="noopener noreferrer">4mm bicone bead star earrings</a>
-                        </td>
+                    </td>
                 </tr>
                 <tr>
                     <td>
@@ -409,7 +437,7 @@
                         (Flag from <a href="https://lgbtqia.fandom.com/wiki/File:Neutrois_Flag.png" target="_blank"
                             rel="noopener noreferrer">LGBTQIA+ Wiki</a>)
                     </td>
-                    <td>3 stripes 
+                    <td>3 stripes
                         <ul>
                             <li>white</li>
                             <li>green</li>
@@ -443,7 +471,7 @@
                     <td>
                         <br />
                     </td>
-                    <td><a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885156512/lgbtq-pride-earrings-aroace-asexual"
+                    <td><a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885155086/lgbtq-pride-earrings-transgender"
                             target="_blank" rel="noopener noreferrer">4mm bicone bead star earrings</a></td>
                 </tr>
                 <tr>
@@ -457,7 +485,7 @@
                         (Flag from <a href="https://lgbtqia.fandom.com/wiki/File:Polygender.webp" target="_blank"
                             rel="noopener noreferrer">LGBTQIA+ Wiki</a>)
                     </td>
-                    <td>5 stripes 
+                    <td>5 stripes
                         <ul>
                             <li>black</li>
                             <li>gray</li>
@@ -469,7 +497,7 @@
                     <td>
                         <br />
                     </td>
-                    <td><a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885156512/lgbtq-pride-earrings-aroace-asexual"
+                    <td><a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885155086/lgbtq-pride-earrings-transgender"
                             target="_blank" rel="noopener noreferrer">4mm bicone bead star earrings</a></td>
                 </tr>
             </table>
@@ -770,6 +798,34 @@
                             target="_blank" rel="noopener noreferrer">4mm bicone bead star earrings</a>
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/Abrosexual_flag.svg/330px-Abrosexual_flag.svg.png"
+                            alt="The abrosexual pride flag; from top to bottom: green, light green, white, pink, dark pink." />
+                        Abrosexual
+                        <br />
+                        (attraction orientation changes over time)
+                        <br />
+                        (Flag from <a href="https://en.wikipedia.org/wiki/File:Abrosexual_flag.svg" target="_blank"
+                            rel="noopener noreferrer">Wikipedia</a>)
+                    </td>
+                    <td>5 stripes
+                        <ul>
+                            <li>green</li>
+                            <li>light green</li>
+                            <li>white</li>
+                            <li>pink</li>
+                            <li>dark-pink</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <br />
+                    </td>
+                    <td>
+                        <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885156512/lgbtq-pride-earrings-aroace-asexual"
+                            target="_blank" rel="noopener noreferrer">4mm bicone bead star earrings</a>
+                    </td>
+                </tr>
             </table>
         </div>
     </div>
@@ -777,7 +833,7 @@
         <nav>
             <ul>
                 <li>&nbsp;</li>
-                <li>Last updated 27 May 2025.</li>
+                <li>Last updated 02 June 2025.</li>
             </ul>
         </nav>
     </footer>
